--- a/task/templates/home.html
+++ b/task/templates/home.html
@@ -19,7 +19,7 @@
             <a class="btn btn-secondary" href="{% url 'signin' %}">
                 Inciar Sesión 
             </a>
-            <a class="btn btn-dark" href="{% url 'signup' %}">
+            <a class="btn btn-light" href="{% url 'signup' %}">
                 Registra Usuario
             </a>
         </div>
